--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tribute Page</title>
-    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
 
   <body>
@@ -12,7 +12,7 @@
       <!-- .header -->
       <header class="header">
         <h1 class="title" id="title">Muammar Gaddafi</h1>
-        <p class="title-description">The man who led Libia</p>
+        <p class="title-description">The man who led Libya</p>
         <figure class="media" id="div-img">
           <img
             class="media__img"
